--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "XXX",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "forever --plain -a -l forever.log -o out.log -e err.log start index.js",
+    "stop": "forever --plain stop index.js || true"
   },
   "dependencies": {
     "express": "~4.9.x",
+    "forever": "0.11.1",
     "goodscloud": ""
   },
   "engines": {
