Fix package.json syntax

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "~4.9.x",
     "cron": "~1.0.5",
     "foreman": "1.0.0",
-    "goodscloud": "0.0.1"
+    "goodscloud": "0.0.1",
     "underscore": "1.7.0",
     "winston": "",
     "winston-papertrail": ""
