--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "goodscloud": "0.0.1",
     "underscore": "1.7.0",
     "winston": "",
-    "winston-papertrail": ""
+    "winston-papertrail": "",
+    "nodejs-websocket": ""
   },
   "engines": {
     "node": "0.10.x"
